Done with stage one , need to add css

--- a/views/register.html
+++ b/views/register.html
@@ -1,7 +1,9 @@
 
 <form name="register">
-	<p><label for="name">Name</label><br /><input type="text" name="user" placeholder="full name" /></p>
+	<p><label for="name">Name</label><br /><input type="text" name="name" placeholder="Full Name" /></p>
+	<p><label for="username">User Name</label><br /><input type="text" name="username" placeholder="User Name" /></p>
 	<p><label for="email">Email</label><br /><input type="text" name="email" placeholder="email address" /></p>
-	<p><label for="pass">Password</label><br /><input type="password" name="pass" placeholder="password" /></p>
+	<p><label for="password">Password</label><br /><input type="password" name="password" placeholder="password" /></p>
+	<p><label for="phone">Phone</label><br /><input type="text" name="phone" placeholder="Phone No." /></p>
 	<p><button type="submit">Create account</button></p>
 </form>
