--- a/views/login.html
+++ b/views/login.html
@@ -1,6 +1,6 @@
 
 <form name="login">
-	<p><label for="email">Email</label><br /><input type="text" name="email" placeholder="email address" /></p>
+	<p><label for="user">User Name</label><br /><input type="text" name="user" placeholder="User Name" /></p>
 	<p><label for="pass">Password</label><br /><input type="password" name="pass" placeholder="password" /></p>
 	<p><button type="submit">Log in</button></p>
 </form>
