Part 1 and 2 of stage 2 done, versioning implemented. Seller page need to be upgraded to use v2 , post page should check token and home page should check if there are no items

--- a/views/post.html
+++ b/views/post.html
@@ -4,7 +4,7 @@
 	<br>
 	<br>
 	<br>
-	<label>Item Photo<input type="file" name="photo" accept="image/png, image/jpeg"/></label>	
+	<label>Item Photo<input type="file" name="photo" accept="image/png, image/jpeg" multiple/></label>	
 	<br>
 	<br>
 	<br>
