--- a/views/post.html
+++ b/views/post.html
@@ -1,15 +1,17 @@
 <h1>Post New Item</h1>
   <form name="post" >
-    <label>Item Name<input type="text" name="name" /></label>
+    <label>Item Name<br><br><input type="text" name="name" /></label>
 	<br>
 	<br>
 	<br>
-	<label>Item Photo<input type="file" name="photo" accept="image/png, image/jpeg" multiple/></label>	
+	<label>Item Photo<br><br><input type="file" name="photo" accept="image/png, image/jpeg" multiple/></label>	
 	<br>
 	<br>
 	<br>
    	<label class="textarea">
       Description
+		<br>
+		<br>
       <textarea name="description" rows="10" cols="30"></textarea>
     </label>
 	<br>
